# v4l2_camera

./: .gitignore  CMakeLists.txt  README.md  package.xml
.devcontainer/: Dockerfile  build_and_push_images.sh  build_opencv.sh  devcontainer.json  devcontainer_all_packages.sh  devcontainer_optional_mounts.sh
.github/workflows/: ci.yml
ci/: pr_compile.sh  pr_run_tests.sh
include/usb_cam/: constants.hpp  learning_node.hpp  usb_cam.hpp
include/usb_cam/formats/: av_pixel_format_helper.hpp  ba10.hpp  bayer.hpp  pixel_format_base.hpp
include/usb_cam/learning/: depth_anything_v2.hpp  interface.hpp  raft.hpp
launch/: image_processing_node.launch  ros1.launch  two_mipi_rgb.launch
scripts/: build_opencv.sh  setup_ros_client.sh  setup_ros_master.sh
src/: interface.cpp  learning_node.cpp  usb_cam.cpp  usb_cam_node.cpp
src/ros1/: usb_cam_node.cpp
test/: test_depth_anything_v2.cpp  test_learning_interface.cpp
